create and update person with location
